Bug 72775 - LibreOffice hang after opening of gp_framework_final_draft_sent_to_shaw_070312.doc
Summary: LibreOffice hang after opening of gp_framework_final_draft_sent_to_shaw_07031...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium major
Assignee: Tushar Bende
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-17 04:52 UTC by Rajashri
Modified: 2014-03-21 11:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File to test (135.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-12-17 04:52 UTC, Rajashri
Details
document has frames. (197.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-17 14:58 UTC, Tushar Bende
Details
optimized document which has a frame with auto wrap property (145.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-17 16:11 UTC, Tushar Bende
Details
optimized document which has a frame with wrap property as around (143.57 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-17 16:12 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2013-12-17 04:52:15 UTC
Created attachment 90857 [details]
File to test

- attached file "Optimized_gp_framework_final_draft_sent_to_shaw_070312.doc_10Dec.docx"
This doc contains frame and pict inside frame.
If we remove frame LO is opening doc without error.So it seems this problem is because of pict within frame.

- Number of pages getting increases on opening file in LibreOffice.
Comment 1 Tushar Bende 2014-03-17 14:58:25 UTC
Created attachment 95940 [details]
document has frames.
Comment 2 Tushar Bende 2014-03-17 16:11:46 UTC
Created attachment 95950 [details]
optimized document which has a frame with auto wrap property
Comment 3 Tushar Bende 2014-03-17 16:12:11 UTC
Created attachment 95951 [details]
optimized document which has a frame with wrap property as around
Comment 4 Commit Notification 2014-03-18 14:43:01 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e44328c4a2ca748e1254c008ff6d84a58601cde

fdo#72775 : LibreOffice hang while opening some documents



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-03-19 10:19:33 UTC
I can confirm this issue is fixed, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 90dd4320de6ace24e464979630a2c9fbab35f64b
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-19_00:22:53

The page number isn't increasing when opened.
Thanks!
Comment 6 RKohad 2014-03-21 11:11:54 UTC
The problem is fixed. Verified on LibreOffice on Windows 7. 
The file opens fine in LibreOffice and gets saved as well.

Version: 4.3.0.0.alpha0+
Build ID: 03a6135292f3612c291ab156896f18dd49cf70d5
TinderBox: Win-x86@42, Branch:master, Time: 2014-03-21_02:25:38