fdo#72775 : LibreOffice hang while opening some documents

Description: There was a problem for some documents, that when opened in LibreOffice
there was continuous increase in page numbers.And this was the reason for LO getting hang.

The root cause found in layact.cxx inside SwLayAction::FormatLayout().
It had "while ( pLow && pLow->GetUpper() == pLay )" where for some documents like one added
in test case this FormatLayout() was getting called recursively because of same content of pLow->GetUpper() and pLay.
It is observed that checking pLow->GetNext() would be more appropriate and giving proper values when debugged and working for all documents.

* added test case to verify that now doc is opening properly and checking it's page count.
* also verified this change on set of 440 real world documents (containing many combinations of MS Office features)
 to make sure there is no regression because of this change.

Change-Id: I94825fd03c553b9521c47e801d94c699d9a8fa22